<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.rickandmortyquizapp.MainActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background2"
        android:scaleType="center"/>
    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:src="@drawable/logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:text="Fan Quiz"/>
        <View
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#ffffff"/>
        <TextView
            style="@style/question"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/desc"/>
        <View
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#ffffff"/>
<ImageView
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:src="@drawable/selam"/>
        <TextView
            style="@style/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"/>

        <RadioGroup
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                style="@style/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1a1"/>
            <RadioButton
                style="@style/answer"
                android:id="@+id/q1ra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1a2"/>
            <RadioButton
                style="@style/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1a3"/>
            <RadioButton
                style="@style/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1a4"/>
        </RadioGroup>
        <View
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#ffffff"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/gazorpazorp"/>
        <TextView
            style="@style/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                style="@style/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2a1"/>
            <RadioButton
                style="@style/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2a2"/>
            <RadioButton
                style="@style/answer"
                android:id="@+id/q2ra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2a3"/>
            <RadioButton
                style="@style/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2a4"/>
        </RadioGroup>

        <View
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#ffffff"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/plumbus2">
        </ImageView>

        <TextView
            style="@style/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                style="@style/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3a1"/>
            <RadioButton
                style="@style/answer"
                android:id="@+id/q3ra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3a2"/>
            <RadioButton
                style="@style/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3a3"/>
            <RadioButton
                style="@style/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3a4"/>
        </RadioGroup>
        <View            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#ffffff"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/scary"/>
        <TextView
            style="@style/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4"/>
        <RadioGroup

            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                style="@style/answer"
                android:id="@+id/q4ra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4a1"/>
            <RadioButton
                style="@style/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4a2"/>
            <RadioButton
                style="@style/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4a3"/>
            <RadioButton
                style="@style/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4a4"/>
        </RadioGroup>
        <View            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#ffffff"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/total"/>
        <TextView
            style="@style/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question5"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                style="@style/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5a1"/>
            <RadioButton
                style="@style/answer"
                android:id="@+id/q5ra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5a2"/>
            <RadioButton
                style="@style/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5a3"/>
            <RadioButton
                style="@style/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5a4"/>
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_button"
            android:layout_gravity="center"
            android:onClick="checkResults"/>
        <View            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#ffffff"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="21sp"
            android:gravity="center"
            android:text="Results"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:id="@+id/quiz_results"/>
    </LinearLayout>
</ScrollView>
</RelativeLayout>
